# mtg

./: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile
.github/workflows/: docker.yml
src/: main.rs  scryfall.rs
